[tool.poetry]
name = "radiantkit"
version = "0.0.0"
description = "Radial Image Analysis Toolkit"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/radiantkit"
repository = "https://github.com/ggirelli/radiantkit"
keywords = ["microscopy", "image", "analysis", "bioimaging", "biology", "cell", "DNA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
argcomplete = "^1.12.1"
czifile = "^2019.7.2"
ggc = "^0.0.3"
jinja2 = "^2.11.2"
joblib = ">=0.16,<0.18"
matplotlib = "^3.3.2"
nd2reader = "^3.2.3"
numpy = "^1.19.2"
pandas = "^1.1.2"
plotly = "^4.10.0"
scikit-image = "^0.17.2"
scipy = "^1.5.2"
tifffile = "^2020.9.29"
tqdm = "^4.50.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"radiant" = "fastx_barber.scripts.radiant:main"
