[tool.poetry]
name = "radiantkit"
version = "0.0.1.20210324.2"
description = "Radial Image Analysis Toolkit"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/radiantkit"
repository = "https://github.com/ggirelli/radiantkit"
keywords = ["microscopy", "image", "analysis", "bioimaging", "nucleus", "segmentation", "conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
czifile = "^2019.7.2"
joblib = ">=0.16,<1.1"
memory-profiler = "^0.58.0 "
nd2reader = {git = "https://github.com/ggirelli/nd2reader"}
numpy = "^1.19.2"
pandas = "^1.1.2"
pims = "^0.5"
plotly = "^4.13.0"
pytest = "^6.1.2"
rich = "^9.0"
scikit-image = ">=0.17.2,<0.19.0"
scipy = "^1.5.2"
tifffile = ">=2020.9.29,<2022.0.0"

[tool.poetry.scripts]
"radiant" = "radiantkit.scripts.radiant:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
